add_executable(exorcist WIN32
    main.cpp
    mainwindow.cpp
    mainwindow.h
    bootstrap/agentcallbacksbootstrap.cpp
    bootstrap/autosavemanager.h
    bootstrap/autosavemanager.cpp
    editor/editorview.cpp
    editor/editorview.h
    editor/breakpointconditiondialog.cpp
    editor/breakpointconditiondialog.h
    editor/diffviewerpanel.cpp
    editor/diffviewerpanel.h
    editor/proposededitpanel.cpp
    editor/proposededitpanel.h
    editor/breadcrumbbar.cpp
    editor/breadcrumbbar.h
    editor/minimapwidget.cpp
    editor/minimapwidget.h
    editor/codefoldingengine.cpp
    editor/codefoldingengine.h
    agent/inlinecompletionengine.cpp
    agent/inlinecompletionengine.h
    agent/nexteditengine.cpp
    agent/nexteditengine.h
    editor/largefileloader.cpp
    editor/largefileloader.h
    editor/syntaxhighlighter.cpp
    editor/syntaxhighlighter.h
    editor/treesitterhighlighter.cpp
    editor/treesitterhighlighter.h
    editor/highlighterfactory.cpp
    editor/highlighterfactory.h
    editor/editormanager.h
    editor/editormanager.cpp
    # Language highlighting data moved to plugins/lang-pack (compiled there only)
    editor/textbuffer.h
    editor/piecetablebuffer.cpp
    editor/piecetablebuffer.h
    codegraph/codegraphtypes.h
    codegraph/codegraphdb.h
    codegraph/codegraphdb.cpp
    codegraph/codegraphindexer.h
    codegraph/codegraphindexer.cpp
    codegraph/codegraphquery.h
    codegraph/codegraphquery.cpp
    codegraph/ilanguageindexer.h
    codegraph/codegraphutils.h
    codegraph/codegraphutils.cpp
    codegraph/cpplanguageindexer.h
    codegraph/cpplanguageindexer.cpp
    codegraph/tslanguageindexer.h
    codegraph/tslanguageindexer.cpp
    codegraph/pylanguageindexer.h
    codegraph/pylanguageindexer.cpp
    lsp/lspmessage.h
    lsp/lsptransport.cpp
    lsp/lsptransport.h
    lsp/processlanguageserver.h
    lsp/processlanguageserver.cpp
    lsp/processlsptransport.cpp
    lsp/processlsptransport.h
    lsp/lspclient.cpp
    lsp/lspclient.h
    lsp/completionpopup.cpp
    lsp/completionpopup.h
    lsp/lspeditorbridge.cpp
    lsp/lspeditorbridge.h
    lsp/hovertooltipwidget.cpp
    lsp/hovertooltipwidget.h
    lsp/referencespanel.cpp
    lsp/referencespanel.h
    lsp/socketlsptransport.h
    lsp/socketlsptransport.cpp
    project/projecttypes.h
    project/projectmanager.cpp
    project/projectmanager.h
    project/solutiontreemodel.cpp
    project/solutiontreemodel.h
    project/iprojecttemplateprovider.h
    project/projecttemplateregistry.cpp
    project/projecttemplateregistry.h
    project/builtintemplateprovider.cpp
    project/builtintemplateprovider.h
    project/newprojectwizard.cpp
    project/newprojectwizard.h
    git/gitservice.cpp
    git/gitservice.h

    editor/symboloutlinepanel.cpp
    editor/symboloutlinepanel.h
    editor/multicursorengine.h
    editor/multicursorengine.cpp
    editor/vimhandler.h
    editor/vimhandler.cpp
    agent/iagentplugin.h
    agent/iagentsettingspageprovider.h
    agent/ichatsessionimporter.h
    agent/iproviderauthintegration.h
    agent/agentorchestrator.cpp
    agent/agentorchestrator.h
    agent/agentplatformbootstrap.cpp
    agent/agentplatformbootstrap.h
    bootstrap/bridgebootstrap.cpp
    bootstrap/bridgebootstrap.h
    bootstrap/aiservicesbootstrap.h
    bootstrap/aiservicesbootstrap.cpp
    bootstrap/dockbootstrap.h
    bootstrap/dockbootstrap.cpp
    bootstrap/statusbarmanager.h
    bootstrap/statusbarmanager.cpp
    bootstrap/dockmanageradapter.h
    bootstrap/dockmanageradapter.cpp
    bootstrap/menumanagerimpl.h
    bootstrap/menumanagerimpl.cpp
    bootstrap/toolbarmanageradapter.h
    bootstrap/toolbarmanageradapter.cpp
    bootstrap/statusbarmanageradapter.h
    bootstrap/statusbarmanageradapter.cpp
    bootstrap/workspacemanagerimpl.h
    bootstrap/workspacemanagerimpl.cpp
    bootstrap/workbenchcommandbootstrap.h
    bootstrap/workbenchcommandbootstrap.cpp
    bootstrap/workbenchstatebootstrap.h
    bootstrap/workbenchstatebootstrap.cpp
    bootstrap/sharedservicesbootstrap.h
    bootstrap/sharedservicesbootstrap.cpp
    bootstrap/templateservicesbootstrap.h
    bootstrap/templateservicesbootstrap.cpp
    bootstrap/postpluginbootstrap.h
    bootstrap/postpluginbootstrap.cpp
    bootstrap/workbenchservicesbootstrap.h
    bootstrap/workbenchservicesbootstrap.cpp
    profile/profilemanifest.h
    profile/profilemanifest.cpp
    profile/profilemanager.h
    profile/profilemanager.cpp
    component/componentregistry.h
    component/componentregistry.cpp
    component/componentserviceadapter.h
    component/componentserviceadapter.cpp
    core/icomponentfactory.h
    sdk/icomponentservice.h
    agent/agentproviderregistry.cpp
    agent/agentproviderregistry.h
    agent/agentrequestrouter.cpp
    agent/agentrequestrouter.h
    agent/chatsessionservice.cpp
    agent/chatsessionservice.h
    agent/toolapprovalservice.cpp
    agent/toolapprovalservice.h
    agent/toolpresentation.h
    agent/toolpresentation.cpp
    agent/agentchatpanel.cpp
    agent/agentchatpanel.h
    agent/agentcontroller.cpp
    agent/agentcontroller.h
    agent/agentmodes.h
    agent/agentmodes.cpp
    agent/agentsession.h
    agent/agentsession.cpp
    agent/braincontextbuilder.cpp
    agent/braincontextbuilder.h
    agent/contextbuilder.cpp
    agent/contextbuilder.h
    agent/icontextprovider.h
    agent/itool.h
    agent/itool.cpp
    agent/memorysuggestionengine.cpp
    agent/memorysuggestionengine.h
    agent/projectbrainservice.cpp
    agent/projectbrainservice.h
    agent/projectbraintypes.h
    agent/projectbraintypes.cpp
    agent/promptvariables.cpp
    agent/promptvariables.h
    agent/sessionstore.cpp
    agent/sessionstore.h
    agent/modelpickerdialog.cpp
    agent/modelpickerdialog.h
    agent/tools/filesystemtools.h
    agent/tools/filesystemtools.cpp
    agent/tools/searchworkspacetool.h
    agent/tools/searchworkspacetool.cpp
    agent/tools/semanticsearchtool.h
    agent/tools/semanticsearchtool.cpp
    agent/tools/runcommandtool.h
    agent/tools/runcommandtool.cpp
    agent/tools/applypatchtool.h
    agent/tools/applypatchtool.cpp
    agent/tools/idecommandtool.h
    agent/tools/idecommandtool.cpp
    agent/tools/idetools.h
    agent/tools/idetools.cpp
    agent/tools/moretools.h
    agent/tools/moretools.cpp
    agent/tools/advancedtools.h
    agent/tools/advancedtools.cpp
    agent/tools/memorytool.h
    agent/tools/memorytool.cpp
    agent/tools/debugtools.h
    agent/tools/debugtools.cpp
    agent/tools/screenshottool.h
    agent/tools/screenshottool.cpp
    agent/tools/introspecttool.h
    agent/tools/introspecttool.cpp
    agent/tools/httptool.h
    agent/tools/httptool.cpp
    agent/tools/luatool.h
    agent/tools/luatool.cpp
    agent/tools/codegraphtool.h
    agent/tools/codegraphtool.cpp
    agent/tools/buildtools.h
    agent/tools/buildtools.cpp
    agent/tools/navigationtools.h
    agent/tools/navigationtools.cpp
    agent/tools/formatcodetool.h
    agent/tools/formatcodetool.cpp
    agent/tools/refactortool.h
    agent/tools/refactortool.cpp
    agent/tools/gitopstool.h
    agent/tools/gitopstool.cpp
    agent/tools/securitytools.h
    agent/tools/securitytools.cpp
    agent/tools/transactiontool.h
    agent/tools/transactiontool.cpp
    agent/tools/askusertool.h
    agent/tools/askusertool.cpp
    agent/tools/editorcontexttool.h
    agent/tools/editorcontexttool.cpp
    agent/tools/changeimpacttool.h
    agent/tools/changeimpacttool.cpp
    agent/tools/scratchpadtool.h
    agent/tools/scratchpadtool.cpp
    agent/tools/managerulestool.h
    agent/tools/managerulestool.cpp
    agent/tools/managememorytool.h
    agent/tools/managememorytool.cpp
    agent/tools/terminalsessiontools.h
    agent/tools/terminalsessiontools.cpp
    agent/tools/pythontools.h
    agent/tools/pythontools.cpp
    agent/tools/packagemanagertools.h
    agent/tools/packagemanagertools.cpp
    agent/tools/subagenttool.h
    agent/subagenttool.cpp
    agent/tools/lsptools.h
    agent/tools/lsptools.cpp
    agent/tools/projectinfotool.h
    agent/tools/projectinfotool.cpp
    agent/tools/filemanagementtools.h
    agent/tools/filemanagementtools.cpp
    agent/tools/clipboardtool.h
    agent/tools/clipboardtool.cpp
    agent/tools/difftool.h
    agent/tools/difftool.cpp
    agent/tools/databasetool.h
    agent/tools/databasetool.cpp
    agent/tools/agentmemorydb.h
    agent/tools/agentmemorydb.cpp
    agent/tools/projectdbtool.h
    agent/tools/projectdbtool.cpp
    agent/tools/projectbraindb.h
    agent/tools/projectbraindb.cpp
    agent/tools/systemtools.h
    agent/tools/systemtools.cpp
    agent/tools/notebooktools.h
    agent/tools/notebooktools.cpp
    agent/tools/githubmcptools.h
    agent/tools/githubmcptools.cpp
    agent/tools/staticanalysistool.h
    agent/tools/staticanalysistool.cpp
    agent/tools/treesitterquerytool.h
    agent/tools/treesitterquerytool.cpp
    agent/tools/devtools.h
    agent/tools/devtools.cpp
    agent/tools/luaagenttoolstore.h
    agent/tools/luaagenttoolstore.cpp
    agent/tools/sandboxtools.h
    agent/tools/sandboxtools.cpp
    agent/tools/dockertools.h
    agent/tools/dockertools.cpp
    agent/diagnosticsnotifier.h
    agent/diagnosticsnotifier.cpp
    agent/treesitteragenthelper.h
    agent/treesitteragenthelper.cpp
    agent/notebookstubs.h
    agent/notebookstubs.cpp
    agent/terminalsessionmanager.h
    agent/terminalsessionmanager.cpp
    agent/workspacecontextdetector.h
    ui/markdownrenderer.cpp
    ui/markdownrenderer.h
    agent/promptfileloader.h
    agent/promptfileloader.cpp
    agent/quickchatdialog.cpp
    agent/quickchatdialog.h
    agent/requestlogpanel.cpp
    agent/requestlogpanel.h
    agent/trajectorypanel.cpp
    agent/trajectorypanel.h
    agent/settingspanel.cpp
    agent/settingspanel.h
    agent/memorybrowserpanel.cpp
    agent/memorybrowserpanel.h
    agent/inlinechat/inlinechatwidget.cpp
    agent/inlinechat/inlinechatwidget.h
    mcp/mcpclient.cpp
    mcp/mcpclient.h
    mcp/mcptooladapter.h
    mcp/mcppanel.cpp
    mcp/mcppanel.h
    ui/notificationtoast.cpp
    ui/notificationtoast.h
    ui/settingsdialog.cpp
    ui/settingsdialog.h
    ui/extrasettingspages.cpp
    ui/extrasettingspages.h
    ui/aboutdialog.cpp
    ui/aboutdialog.h
    ui/recentfilesmanager.cpp
    ui/recentfilesmanager.h
    ui/welcomewidget.cpp
    ui/welcomewidget.h
    ui/themegallerypanel.cpp
    ui/themegallerypanel.h
    ui/themeicons.cpp
    ui/themeicons.h
    ui/keymapmanager.cpp
    ui/keymapmanager.h
    ui/keymapdialog.cpp
    ui/keymapdialog.h
    ui/workspacesymbolsdialog.cpp
    ui/workspacesymbolsdialog.h
    ui/gotolinedialog.cpp
    ui/gotolinedialog.h
    ui/dockautohidemanager.cpp
    ui/dockautohidemanager.h
    ui/thememanager.cpp
    ui/thememanager.h
    ui/dock/DockTypes.h
    ui/dock/DockTabBar.h
    ui/dock/DockTabBar.cpp
    ui/dock/DockTitleBar.h
    ui/dock/DockTitleBar.cpp
    ui/dock/ExDockWidget.h
    ui/dock/ExDockWidget.cpp
    ui/dock/DockArea.h
    ui/dock/DockArea.cpp
    ui/dock/DockSplitter.h
    ui/dock/DockSplitter.cpp
    ui/dock/DockToolBar.h
    ui/dock/DockToolBar.cpp
    ui/dock/DockToolBarArea.h
    ui/dock/DockToolBarArea.cpp
    ui/dock/DockToolBarManager.h
    ui/dock/DockToolBarManager.cpp
    ui/dock/DockSideTab.h
    ui/dock/DockSideTab.cpp
    ui/dock/DockSideBar.h
    ui/dock/DockSideBar.cpp
    ui/dock/DockOverlayPanel.h
    ui/dock/DockOverlayPanel.cpp
    ui/dock/DockDropOverlay.h
    ui/dock/DockDropOverlay.cpp
    ui/dock/DockManager.h
    ui/dock/DockManager.cpp
    ui/dock/IToolBarService.h
    commandpalette.cpp
    commandpalette.h
    crashhandler.cpp
    crashhandler.h
    logger.cpp
    logger.h
    resources.qrc
    exorcist.rc
    aiinterface.h
    plugininterface.h
    pluginmanager.cpp
    pluginmanager.h
    plugin/plugingallerypanel.cpp
    plugin/plugingallerypanel.h
    plugin/pluginmarketplaceservice.h
    plugin/pluginmarketplaceservice.cpp
    serviceregistry.cpp
    serviceregistry.h
    startupprofiler.h
    startupprofiler.cpp
    thememanager.cpp
    thememanager.h
    core/ifilesystem.h
    core/ifilewatcher.h
    core/ienvironment.h
    core/iprocess.h
    core/iterminal.h
    core/inetwork.h
    core/idockmanager.h
    core/imenumanager.h
    core/istatusbarmanager.h
    core/itoolbarmanager.h
    core/iworkspacemanager.h
    core/iprofilemanager.h
    core/qtfilesystem.cpp
    core/qtfilesystem.h
    core/qtfilewatcher.cpp
    core/qtfilewatcher.h
    core/qtenvironment.cpp
    core/qtenvironment.h
    core/qtprocess.cpp
    core/qtprocess.h
    core/qtterminal.cpp
    core/qtterminal.h
    core/nullnetwork.cpp
    core/nullnetwork.h
    build/outputpanel.cpp
    build/outputpanel.h
    build/runlaunchpanel.cpp
    build/runlaunchpanel.h
    build/kit.cpp
    build/kit.h
    problems/problemspanel.h
    problems/problemspanel.cpp
    editor/filewatchservice.cpp
    editor/filewatchservice.h
    agent/contextpruner.cpp
    agent/contextpruner.h
    agent/autocompactor.cpp
    agent/autocompactor.h
    agent/testscaffold.cpp
    agent/testscaffold.h
    agent/authmanager.cpp
    agent/authmanager.h
    agent/tools/websearchtool.h
    agent/tools/websearchtool.cpp
    editor/renamesuggestionwidget.cpp
    editor/renamesuggestionwidget.h
    agent/securekeystorage.cpp
    agent/securekeystorage.h
    agent/promptfilemanager.h
    agent/promptfilemanager.cpp
    editor/mergeconflictresolver.h
    editor/mergeconflictresolver.cpp
    editor/inlinereviewwidget.cpp
    editor/inlinereviewwidget.h
    agent/modelregistry.h
    agent/modelregistry.cpp
    agent/oauthmanager.h
    agent/domainfilter.h
    agent/domainfilter.cpp
    git/commitmessagegenerator.h
    git/commitmessagegenerator.cpp
    editor/multichunkeditor.h
    editor/languagecompletionconfig.h
    agent/contexteditor.cpp
    agent/contexteditor.h
    agent/trajectoryrecorder.h
    agent/trajectoryrecorder.cpp
    agent/featureflags.h
    agent/featureflags.cpp
    agent/notebookstubs.h
    agent/reviewmanager.h
    agent/reviewmanager.cpp
    agent/testgenerator.h
    agent/testgenerator.cpp
    agent/authstatusindicator.h
    agent/authstatusindicator.cpp
    agent/promptfilepicker.h
    agent/promptfilepicker.cpp
    agent/chatthemeadapter.h
    agent/chatthemeadapter.cpp
    agent/apikeymanagerwidget.h
    agent/apikeymanagerwidget.cpp
    agent/networkmonitor.h
    agent/networkmonitor.cpp
    agent/citationmanager.h
    agent/citationmanager.cpp
    mcp/mcpservermanager.h
    mcp/mcpservermanager.cpp
    agent/modelconfigwidget.h
    agent/modelconfigwidget.cpp
    agent/contextinspector.h
    agent/contextinspector.cpp
    agent/toolcalltrace.h
    agent/toolcalltrace.cpp
    agent/trajectoryreplaywidget.h
    agent/trajectoryreplaywidget.cpp
    agent/promptarchiveexporter.h
    agent/promptarchiveexporter.cpp
    agent/memoryfileeditor.h
    agent/memoryfileeditor.cpp
    agent/backgroundcompactor.h
    agent/errorstatewidget.h
    agent/errorstatewidget.cpp
    agent/telemetrymanager.h
    agent/telemetrymanager.cpp
    agent/setuptestswizard.h
    agent/setuptestswizard.cpp
    agent/renameintegration.h
    agent/renameintegration.cpp
    agent/accessibilityhelper.h
    agent/accessibilityhelper.cpp
    agent/tooltogglemanager.h
    agent/tooltogglemanager.cpp
    agent/contextscopeconfig.h
    agent/contextscopeconfig.cpp
    agent/ui/agentuievent.h
    agent/ui/iagentuirenderer.h
    agent/ui/agentuibus.h
    agent/ui/agentuibus.cpp
    agent/ui/agentdashboardpanel.h
    agent/ui/agentdashboardpanel.cpp
    agent/ui/dashboardjsbridge.h
    agent/ui/dashboardjsbridge.cpp
    agent/tools/dashboardtools.h
    agent/tools/dashboardtools.cpp
    agent/chat/chatcontentpart.h
    agent/chat/chatinputwidget.cpp
    agent/chat/chatinputwidget.h
    agent/chat/chatpanelwidget.cpp
    agent/chat/chatpanelwidget.h
    agent/chat/chatsessionhistorypopup.h
    agent/chat/chatsessionhistorypopup.cpp
    agent/chat/chatsessionmodel.h
    agent/chat/chatsessionmodel.cpp
    agent/chat/chatthemetokens.h
    agent/chat/chatturnmodel.h
    agent/chat/chatturnmodel.cpp
    agent/chat/toolpresentationformatter.h
    sdk/pluginpermission.h
    sdk/icommandservice.h
    sdk/iworkspaceservice.h
    sdk/ieditorservice.h
    sdk/iviewservice.h
    sdk/inotificationservice.h
    sdk/igitservice.h
    sdk/iterminalservice.h
    sdk/idiagnosticsservice.h
    sdk/itaskservice.h
    sdk/taskserviceimpl.h
    sdk/taskserviceimpl.cpp
    sdk/ibuildsystem.h
    sdk/ilaunchservice.h
    sdk/ioutputservice.h
    sdk/irunoutputservice.h
    sdk/itestrunner.h
    sdk/idebugadapter.h
    sdk/idebugservice.h
    sdk/ilspservice.h
    sdk/isearchservice.h
    sdk/isearchservice.cpp
    search/symbolindex.h
    search/symbolindex.cpp
    search/workspacechunkindex.h
    search/workspacechunkindex.cpp
    sdk/ihostservices.h
    sdk/hostservices.cpp
    sdk/hostservices.h
    sdk/contributionregistry.cpp
    sdk/contributionregistry.h
    sdk/permissionguard.h
    sdk/permissionguard.cpp
    plugin/pluginmanifest.cpp
    plugin/pluginmanifest.h
    plugin/workbenchpluginbase.h
    plugin/workbenchpluginbase.cpp
    plugin/languageworkbenchpluginbase.h
    plugin/languageworkbenchpluginbase.cpp
    plugin/icommandhandler.h
    plugin/iviewcontributor.h
    plugin/icompletioncontributor.h
    plugin/ieditorcontributor.h
    plugin/iformattercontributor.h
    plugin/ilanguagecontributor.h
    plugin/ilintercontributor.h
    plugin/isettingscontributor.h
    plugin/itaskcontributor.h
    plugin/ithemecontributor.h
    sdk/cabi/exorcist_plugin_api.h
    sdk/cabi/exorcist_sdk.hpp
    sdk/cabi/cabi_bridge.h
    sdk/cabi/cabi_bridge.cpp
    sdk/luajit/luascriptengine.h
    sdk/luajit/luascriptengine.cpp
    sdk/luajit/luahostapi.h
    sdk/luajit/luahostapi.cpp
    process/exobridgecore.h
    process/exobridgecore.cpp
    process/ipcprotocol.h
    process/ipcprotocol.cpp
    process/bridgeclient.h
    process/bridgeclient.cpp
    process/processmanager.h
    process/processmanager.cpp
    settings/workspacesettings.h
    settings/workspacesettings.cpp
    settings/languageprofile.h
    settings/languageprofile.cpp
)

# ── Chat renderer: Ultralight (HTML/JS) vs Qt widgets ────────────────────────
if(EXORCIST_USE_ULTRALIGHT)
    target_sources(exorcist PRIVATE
        agent/chat/ultralight/ultralightengine.h
        agent/chat/ultralight/ultralightengine.cpp
        agent/chat/ultralight/ultralightwidget.h
        agent/chat/ultralight/ultralightwidget.cpp
        agent/chat/ultralight/chatjsbridge.h
        agent/chat/ultralight/chatjsbridge.cpp
    )
else()
    target_sources(exorcist PRIVATE
        agent/chat/chatfollowupswidget.h
        agent/chat/chatfollowupswidget.cpp
        agent/chat/chatmarkdownwidget.h
        agent/chat/chatmarkdownwidget.cpp
        agent/chat/chatthinkingwidget.h
        agent/chat/chatthinkingwidget.cpp
        agent/chat/chattoolinvocationwidget.h
        agent/chat/chattoolinvocationwidget.cpp
        agent/chat/chattranscriptview.h
        agent/chat/chattranscriptview.cpp
        agent/chat/chatturnwidget.h
        agent/chat/chatturnwidget.cpp
        agent/chat/chatwelcomewidget.h
        agent/chat/chatwelcomewidget.cpp
        agent/chat/chatworkspaceeditwidget.h
        agent/chat/chatworkspaceeditwidget.cpp
    )
endif()

target_link_libraries(exorcist PRIVATE Qt6::Widgets Qt6::Network Qt6::Concurrent Qt6::Sql Qt6::Svg libluajit)
if(WIN32)
    target_link_libraries(exorcist PRIVATE dbghelp)
endif()
target_include_directories(exorcist PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

# Export symbols so plugins can link against the executable's import library.
# This is required for Qt MOC-generated symbols (Q_OBJECT meta-objects, signals)
# in SDK interfaces that plugins instantiate or connect to.
set_target_properties(exorcist PROPERTIES ENABLE_EXPORTS TRUE)
if(MINGW OR (CMAKE_CXX_COMPILER_ID MATCHES "Clang" AND WIN32))
    # MinGW / llvm-mingw: export all symbols to create an import library
    target_link_options(exorcist PRIVATE "-Wl,--export-all-symbols")
elseif(UNIX)
    # Linux / macOS: export dynamic symbols so dlopen'd plugins can resolve them
    target_link_options(exorcist PRIVATE "-rdynamic")
endif()

if(EXORCIST_USE_TREESITTER)
    target_compile_definitions(exorcist PRIVATE EXORCIST_HAS_TREESITTER)
    target_link_libraries(exorcist PRIVATE
        tree-sitter-core
        ts-grammar-c ts-grammar-cpp ts-grammar-python
        ts-grammar-javascript ts-grammar-typescript
        ts-grammar-rust ts-grammar-json
        ts-grammar-go ts-grammar-yaml ts-grammar-toml
    )
endif()

if(EXORCIST_USE_ULTRALIGHT)
    target_compile_definitions(exorcist PRIVATE EXORCIST_HAS_ULTRALIGHT)
    target_link_libraries(exorcist PRIVATE ultralight-sdk)
    ultralight_deploy_runtime(exorcist)
endif()

if(EXORCIST_USE_LLVM)
    target_include_directories(exorcist PRIVATE ${LLVM_INCLUDE_DIRS})
    target_compile_definitions(exorcist PRIVATE ${LLVM_DEFINITIONS})
endif()

if(WIN32 AND EXORCIST_DEPLOY_QT)
    get_target_property(_qt_core_location Qt6::Core LOCATION)
    get_filename_component(_qt_bin_dir "${_qt_core_location}" DIRECTORY)
    add_custom_command(TARGET exorcist POST_BUILD
        COMMAND "${_qt_bin_dir}/windeployqt.exe"
            --compiler-runtime
            "$<TARGET_FILE:exorcist>"
        VERBATIM
    )
endif()

# Copy Lua script plugins to build output for testing
if(EXISTS "${CMAKE_SOURCE_DIR}/plugins/lua")
    add_custom_command(TARGET exorcist POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy_directory
            "${CMAKE_SOURCE_DIR}/plugins/lua"
            "$<TARGET_FILE_DIR:exorcist>/plugins/lua"
        COMMENT "Copying Lua script plugins..."
    )
endif()

# Performance budget: report binary size after build
# Debug builds include debug symbols — use generous limit; Release is tighter.
if(CMAKE_BUILD_TYPE STREQUAL "Release")
    set(EXORCIST_BINARY_SIZE_BUDGET 52428800 CACHE STRING "Max binary size in bytes (50 MB Release)")
else()
    set(EXORCIST_BINARY_SIZE_BUDGET 209715200 CACHE STRING "Max binary size in bytes (200 MB Debug)")
endif()
add_custom_command(TARGET exorcist POST_BUILD
    COMMAND ${CMAKE_COMMAND}
        -DBINARY_PATH=$<TARGET_FILE:exorcist>
        -DMAX_BYTES=${EXORCIST_BINARY_SIZE_BUDGET}
        -P "${CMAKE_SOURCE_DIR}/cmake/report_binary_size.cmake"
    COMMENT "Checking binary size budget..."
)
